resources/css/home.css
/* ... */
.guide__modal .element .desc__parent .blur .button svg
{
    position: relative;
    top: -2px;
}
.guide__modal .left
{
    width: 525px;
}
.guide__modal .middle
{
    width: 4px;
    height: 430px;
    background-color: #a0adff31;
    border-radius: 10px;
    margin: 0 26px;
    margin-top: 75px;
}
.guide__modal .close
{
    position: absolute;
    z-index: 100;
    width: 36px;
    height: 36px;
    right: 39px;
    top: 30px;
    cursor: pointer;
}
@media(max-width: 1600px)
{
    .moved__container
    {
        left: 105px;
        width: 850px;
        height: 530px;
        border-radius: 65px;
        margin-top: 40px;
    }
    .menu
    {
        left: -360px;
        top: -30px;
        width: 310px;
    }
    .menu__element p
    {
        width: 100%;
        left: 0;
    }
    .menu .goals::before
    {
        right: 10px;
    }
    .moved__container .left__part
    {
        width: 125px;
    }
    .right__part__title
    {
        font-size: 52px;
        top: -90px;
        left: -30px;
    }
    .left__part__back
    {
        left: 35px;
        bottom: 25px;
    }
    .moved__container .right__part
    {
        margin-top: 40px;
    }
    .right__part .flex
    {
        width: 690px;
        padding-left: 10px;
        margin: 0;
        gap: 34px 37px;
        overflow: -moz-scrollbars-vertical; 
        overflow-y: scroll;
        padding-bottom: 20px;
    }
    .right__part__hint
    {
        top: 430px;
        left: 155px;
    }
    .right__part__hint p
    {
        opacity: 1;
        transform: translateY(0);
    }
    .edit__modal__parent .goal__create .preview__parent .preview
    {
        top: -150px !important;
    }
    .delete__modal
    {
        width: 350px;
        height: 135px;
    }
    .delete__modal h3
    {
        font-size: 18px;
        margin-top: 10px;
    }
    .delete__modal p
    {
        font-size: 16px;
    }
    .delete__modal .flex p
    {
        font-size: 18px;
        top: 3.5px;
    }
    .delete__modal .flex .yes, .delete__modal .flex .no
    {
        height: 30px;
    }
}
/* ANIMATIONS */
@keyframes menu__appear {
    0% {
        left: -900px;
        opacity: 0;
    }
    100% {
        left: -450px;
        opacity: 1;
    }
}
@keyframes menu__disappear {
    0% {
        left: -450px;
        opacity: 1;
    }
    100% {
        left: -900px;
        opacity: 0;
    }
}
@keyframes content__container__appear {
    0% {
        transform: translateY(40%);
        opacity: 0;
    }
    100% {
        transform: translateY(0);
        opacity: 1;
    }
}
@keyframes content__container__disappear {
    0% {
        transform: translateY(0);
        opacity: 1;
    }
    100% {
        transform: translateY(40%);
        opacity: 0;
    }
}
@keyframes moved__container__appear {
    0% {
        left: 30%;
        opacity: 0;
    }
    100% {
        left: 5%;
        opacity: 1;
    }
}
@keyframes moved__container__disappear {
    0% {
        left: 5%;
        opacity: 1;
    }
    100% {
        left: 30%;
        opacity: 0;
    }
}

